--- a/markdown/fst.Rmd
+++ b/markdown/fst.Rmd
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(echo = TRUE, eval=F, message=F, warning=F)
 library(tidyverse)
 library(RcppCNPy)
 library(cowplot)
+library(ggstatsplot)
+library(statsExpressions)
 ```
 
 ## Get saf, maf, and Fst with ANGSD
@@ -18,24 +20,24 @@ library(cowplot)
 #### Sliding window trimmed PE samples (new)
 
 ```{bash eval=F}
-## MAF and SAF
+## MAF and SAF (minInd=20)
 nohup bash /workdir/genomic-data-analysis/scripts/get_maf_per_pop.sh \
 /workdir/batch-effect/ \
 /workdir/batch-effect/sample_lists/sample_table_merged.tsv \
 6 \
 bam_list_realigned_ \
 /workdir/cod/reference_seqs/gadMor3.fasta \
-/workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.txt \
-20 661 20 20 \
+/workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20.txt \
+20 184 20 20 \
 > /workdir/batch-effect/nohups/get_maf_per_pop.nohup &
 ## Fst
 nohup bash /workdir/genomic-data-analysis/scripts/get_fst.sh \
 /workdir/batch-effect/angsd/popminind20/ \
 /workdir/batch-effect/sample_lists/sample_table_merged.tsv \
 6 \
-_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20 \
+_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20 \
 > /workdir/batch-effect/nohups/get_fst.nohup &
-## Get depth count from se samples without a mapping quality filter
+## Get depth count from se samples without a mapping quality filter (minInd=2)
 cd /workdir/batch-effect
 nohup /workdir/programs/angsd0.931/angsd/angsd \
 -b sample_lists/bam_list_per_pop/bam_list_realigned_se.txt \
@@ -43,8 +45,8 @@ nohup /workdir/programs/angsd0.931/angsd/angsd \
 -out angsd/popminind2/bam_list_realigned_se_anymapq \
 -doCounts 1 -doDepth 1 -dumpCounts 1 \
 -P 16 -setMinDepth 2 -minInd 2 -minQ 20 \
--sites /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.txt \
--rf /workdir/cod/greenland-cod/angsd/global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked.chrs \
+-sites /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20.txt \
+-rf /workdir/batch-effect/angsd/global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20.chrs \
 >& nohups/get_depth_anymapq_bam_list_realigned_se.log &
 ```
 
@@ -54,15 +56,16 @@ nohup /workdir/programs/angsd0.931/angsd/angsd \
 #### Without filtering
 
 ```{r eval=T, fig.width=15, fig.height=3}
-maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz") %>%
+maf_se <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz") %>%
   transmute(lg = chromo, position = position, major=major, minor = minor, se_maf = knownEM, se_nind=nInd)
-maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.mafs.gz")%>%
+maf_pe <- read_tsv("../angsd/popminind20/pe_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.mafs.gz")%>%
   transmute(lg = chromo, position = position, major=major, minor = minor, pe_maf = knownEM, pe_nind=nInd)
-fst <- read_tsv("../angsd/popminind20/pe_se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.alpha_beta.txt", col_names = F) %>%
+fst <- read_tsv("../angsd/popminind20/pe_se_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.alpha_beta.txt", col_names = F) %>%
   mutate(X5=X3/X4) %>%
   transmute(lg=X1, position = X2, alpha=X3, beta=X4, fst = X5)
 maf_joined <- inner_join(maf_se, maf_pe) %>%
   left_join(fst) %>%
+  filter(str_detect(lg, "LG")) %>%
   #filter(se_nind>=20, pe_nind>=20) %>%
   mutate(delta = abs(se_maf- pe_maf)) %>%
   arrange(desc(fst))
@@ -75,7 +78,19 @@ head(maf_joined)
 maf_joined %>%
   ggplot(aes(x=position/10^6, y=fst)) +
   geom_point(size = 0.2) +
-  geom_smooth(aes(color=minor)) +
+  #geom_smooth(aes(color=minor)) +
+  facet_grid(~lg, scales = "free_x", space = "free_x") +
+  theme_cowplot() +
+  theme(panel.spacing = unit(0.0, "lines"))
+fixed_windowed_fst <- function(x, window_length){
+  mutate(x, position=cut(position, breaks=seq(0,50*10^6,window_length), labels=seq(window_length/2,50*10^6-window_length/2,window_length))) %>%
+  group_by(lg, position) %>%
+  summarise(fst=sum(alpha)/sum(beta)) %>%
+  mutate(position=as.numeric(as.character(position)))
+}
+fixed_windowed_fst(maf_joined, 10000) %>%
+  ggplot(aes(x=position/10^6, y=fst)) +
+  geom_point(size = 0.2) +
   facet_grid(~lg, scales = "free_x", space = "free_x") +
   theme_cowplot() +
   theme(panel.spacing = unit(0.0, "lines"))
@@ -86,7 +101,7 @@ maf_joined %>%
 ```{r eval=T, fig.width=10, fig.height=3}
 anymapq_depth <- read_tsv("../angsd/popminind2/bam_list_realigned_se_anymapq.pos.gz") %>%
   rename(lg=chr, position=pos, total_depth_anymapq=totDepth)
-mapq20_depth <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mincov_contamination_filtered_mindp151_maxdp661_minind102_minq20_downsampled_unlinked_popminind20.pos.gz") %>%
+mapq20_depth <- read_tsv("../angsd/popminind20/se_global_snp_list_bam_list_realigned_mindp46_maxdp184_minind20_minq20_popminind20.pos.gz") %>%
   rename(lg=chr, position=pos, total_depth_mapq20=totDepth)
 depth <- inner_join(anymapq_depth, mapq20_depth) %>%
   mutate(depth_ratio=total_depth_mapq20/total_depth_anymapq)
@@ -98,11 +113,43 @@ p <- maf_joined %>%
   geom_smooth(se=T) +
   theme_cowplot()
 ggExtra::ggMarginal(p, type = "histogram", size=5, margins="x", fill="white")
+
+
+maf_divided <- maf_joined %>%
+  mutate(type=ifelse(fst > 0.3, "Fst outliers\n(n = 791)", "all other SNPs\n(n=1,731,947)")) %>%
+  mutate(type=fct_relevel(type, c("Fst outliers\n(n = 791)", "all other SNPs\n(n=1,731,947)"))) %>%
+  left_join(depth) 
+maf_divided_stats <- centrality_description(maf_divided, type, depth_ratio)
+maf_divided %>%
+  ggplot(aes(x=depth_ratio)) +
+  geom_density(mapping = aes(fill=type), alpha=0.3, adjust=1.8) +
+  geom_vline(data=maf_divided_stats, aes(xintercept = depth_ratio)) +
+  geom_label(data=maf_divided_stats, aes(label=expression), y=5, parse=TRUE) +
+  scale_fill_viridis_d() +
+  #labs(subtitle = two_sample_test(maf_divided, type, depth_ratio)$expression[[1]])
+  labs(
+    x="depth ratio",
+    y="density",
+    subtitle=expression(paste(italic("t")["Welch"], "(", "790.19", ") = ", "-65.72", 
+    ", ", italic("p"), " = ", "1.68e-322", ", ", widehat(italic("g"))["Hedges"], 
+    " = ", "-2.93", ", CI"["95%"], " [", "-3.10", ", ", "-2.76", 
+    "], ", italic("n")["obs"], " = ", "1,732,738"))) +
+  theme_ggstatsplot() 
+```
+
+```{r eval=FALSE}
+## To get the test stats
 maf_joined %>%
+  mutate(type=ifelse(fst > 0.3, "Fst outliers", "all other SNPs")) %>%
+  mutate(type=fct_relevel(type, c("Fst outliers", "all other SNPs"))) %>%
   left_join(depth) %>%
-  ggplot() +
-  geom_histogram(aes(x=depth_ratio, y = (..count..)/sum(..count..)), binwidth = 0.1) +
-  scale_x_continuous(breaks = c(1:10/10), labels = c(1:10/10))
+  ggbetweenstats(y=depth_ratio, x=type, output="subtitle", bf.message = FALSE)
+stats_plot <- maf_joined %>%
+  mutate(type=ifelse(fst > 0.3, "Fst outliers", "all other SNPs")) %>%
+  mutate(type=fct_relevel(type, c("Fst outliers", "all other SNPs"))) %>%
+  left_join(depth) %>%
+  ggbetweenstats(y=depth_ratio, x=type, bf.message = FALSE, point.path = FALSE)
+gginnards::delete_layers(stats_plot, "GeomPoint")
 ```
 
 ```{r eval=T, fig.width=15, fig.height=3}
@@ -111,10 +158,20 @@ maf_joined %>%
   filter(depth_ratio > 0.9) %>%
   ggplot(aes(x=position/10^6, y=fst)) +
   geom_point(size = 0.2) +
-  geom_smooth(aes(color=minor)) +
   facet_grid(~lg, scales = "free_x", space = "free_x") +
   theme_cowplot() +
   theme(panel.spacing = unit(0.0, "lines"))
+
+maf_joined %>%
+  left_join(depth) %>%
+  filter(depth_ratio > 0.9) %>%
+  fixed_windowed_fst(10000) %>%
+  ggplot(aes(x=position/10^6, y=fst)) +
+  geom_point(size = 0.2) +
+  facet_grid(~lg, scales = "free_x", space = "free_x") +
+  theme_cowplot() +
+  theme(panel.spacing = unit(0.0, "lines"))
+
 maf_joined %>%
   left_join(depth) %>% 
   filter(depth_ratio > 0.9) %>%
@@ -124,61 +181,32 @@ maf_joined %>%
 
 #### Spot check some outlier SNPs
 
-LG13:23405220
-LG04:13667425
-LG18:13944731
-LG23:6170006
-LG03:7041486
+LG04:13667429
+LG07:9272785
+LG08:22940796
+LG15:7111963
+LG17:19229736
 
 ```{bash eval=F}
 cd /workdir/batch-effect/
 ## SE samples
 for FILE in `cat /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_se.txt`; do 
-samtools view -b $FILE "LG13:23395220-23415220" > ${FILE%bam}'se_LG13.bam'
-samtools view -b $FILE "LG04:13657425-13677425" > ${FILE%bam}'se_LG04.bam'
-samtools view -b $FILE "LG18:13934731-13954731" > ${FILE%bam}'se_LG18.bam'
-samtools view -b $FILE "LG23:6160006-6180006" > ${FILE%bam}'se_LG23.bam'
-samtools view -b $FILE "LG03:7031486-7051486" > ${FILE%bam}'se_LG03.bam'
+samtools view -b $FILE "LG04:13666429-13668429" > ${FILE%bam}'se_LG04.bam'
+samtools view -b $FILE "LG07:9271785-9273785" > ${FILE%bam}'se_LG07.bam'
+samtools view -b $FILE "LG08:22939796-22941796" > ${FILE%bam}'se_LG08.bam'
+samtools view -b $FILE "LG15:7110963-7112963" > ${FILE%bam}'se_LG15.bam'
+samtools view -b $FILE "LG17:19228736-19230736" > ${FILE%bam}'se_LG17.bam'
 done
 samtools merge /workdir/batch-effect/bam/fst_outliers/fst_outliers_se.bam /workdir/batch-effect/bam/*se_LG??.bam
 samtools index /workdir/batch-effect/bam/fst_outliers/fst_outliers_se.bam
 ## PE samples
 for FILE in `cat /workdir/batch-effect/sample_lists/bam_list_per_pop/bam_list_realigned_pe.txt`; do 
-samtools view -b $FILE "LG13:23395220-23415220" > ${FILE%bam}'pe_LG13.bam'
-samtools view -b $FILE "LG04:13657425-13677425" > ${FILE%bam}'pe_LG04.bam'
-samtools view -b $FILE "LG18:13934731-13954731" > ${FILE%bam}'pe_LG18.bam'
-samtools view -b $FILE "LG23:6160006-6180006" > ${FILE%bam}'pe_LG23.bam'
-samtools view -b $FILE "LG03:7031486-7051486" > ${FILE%bam}'pe_LG03.bam'
+samtools view -b $FILE "LG04:13666429-13668429" > ${FILE%bam}'pe_LG04.bam'
+samtools view -b $FILE "LG07:9271785-9273785" > ${FILE%bam}'pe_LG07.bam'
+samtools view -b $FILE "LG08:22939796-22941796" > ${FILE%bam}'pe_LG08.bam'
+samtools view -b $FILE "LG15:7110963-7112963" > ${FILE%bam}'pe_LG15.bam'
+samtools view -b $FILE "LG17:19228736-19230736" > ${FILE%bam}'pe_LG17.bam'
 done
 samtools merge /workdir/batch-effect/bam/fst_outliers/fst_outliers_pe.bam /workdir/batch-effect/bam/*pe_LG??.bam
 samtools index /workdir/batch-effect/bam/fst_outliers/fst_outliers_pe.bam
-## PE samples, raw bam files
-INPUTPATH='/workdir/cod/greenland-cod/bam/'
-OUTPUTPATH='/workdir/batch-effect/bam/fst_outliers/'
-
-for K in {2..168}; do
-  SAMPLE=`head /workdir/batch-effect/sample_lists/sample_table_unmerged.tsv -n $K | tail -n 1 | cut -f 4`
-  LANE=`head /workdir/batch-effect/sample_lists/sample_table_unmerged.tsv -n $K | tail -n 1 | cut -f 2`
-  SEQID=`head /workdir/batch-effect/sample_lists/sample_table_unmerged.tsv -n $K | tail -n 1 | cut -f 3`
-  DATATYPE=`head /workdir/batch-effect/sample_lists/sample_table_unmerged.tsv -n $K | tail -n 1 | cut -f 6`
-  
-  PREFIX=$SAMPLE'_'$SEQID'_'$LANE'_'$DATATYPE'_bt2_gadMor3'
-  
-  if [ ! -f $OUTPUTPATH$PREFIX'_se_raw_LG13.bam' ]; then
-  if [ $DATATYPE = se ]; then
-      samtools sort $INPUTPATH$PREFIX'.bam' > $OUTPUTPATH'/tmp.bam'
-      samtools index $OUTPUTPATH'/tmp.bam'
-      #echo $INPUTPATH$PREFIX'.bam'
-      #echo $OUTPUTPATH$PREFIX'_minq20_sorted.bam'
-      samtools view -b $OUTPUTPATH'/tmp.bam' "LG13:23395220-23415220" > $OUTPUTPATH$PREFIX'_se_raw_LG13.bam'
-      samtools view -b $OUTPUTPATH'/tmp.bam' "LG04:13657425-13677425" > $OUTPUTPATH$PREFIX'_se_raw_LG04.bam'
-      samtools view -b $OUTPUTPATH'/tmp.bam' "LG18:13934731-13954731" > $OUTPUTPATH$PREFIX'_se_raw_LG18.bam'
-      samtools view -b $OUTPUTPATH'/tmp.bam' "LG23:6160006-6180006" > $OUTPUTPATH$PREFIX'_se_raw_LG23.bam'
-      samtools view -b $OUTPUTPATH'/tmp.bam' "LG03:7031486-7051486" > $OUTPUTPATH$PREFIX'_se_raw_LG03.bam'
-  fi
-  fi
-done
-
-samtools merge /workdir/batch-effect/bam/fst_outliers/fst_outliers_se_raw.bam /workdir/batch-effect/bam/fst_outliers/*se_raw_LG??.bam
-samtools index /workdir/batch-effect/bam/fst_outliers/fst_outliers_se_raw.bam
 ```
